Style updates; added SEO tags

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -227,3 +227,7 @@ ul {
 .language-switcher .lang-btn:hover {
     color: var(--secondary-color);
 }
+
+.svg-white-filter {
+    filter: brightness(0) invert(1);
+}
