--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
 
 /* Import Tailwind */
 @tailwind base;
@@ -111,8 +111,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Young Serif', 'Ubuntu', 'Space Grotesk', sans-serif;
-    font-weight: 800;
+    font-family: 'Francis One', 'Outfit', 'Space Grotesk', sans-serif;
+    font-weight: 600;
 }
 
 h1 {
